# vehicle-control-unit

./: .clang-format  .gitignore  .gitmodules  .mxproject  CMakeCache.txt  CMakeLists.txt  CODEOWNERS  DMS-24-RTOS-VCU.ioc  README.md  VCU_V3.ioc  build.ninja  cmake_install.cmake  compile_commands.json  conftest.py  pytest.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  design.md  docs.md  milestone.md  task.md
.github/workflows/: build.yml  ci.yml  hil-tests.yml  hil.yml
Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: adc.c  can.c  dac.c  freertos.c  gpio.c  main.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  tim.c  usb_otg.c
Core/Tests/: tests.c
Core/Tests/unit/: CMakeLists.txt  runner.c  runner_fsm.c  stubs.c  test_fms.c  test_fsm.c  test_fsm.h  test_internals.c
Core/User/: app.c  app.h  app_main.c  board_outputs.c  board_outputs.h  can0_powertrain.c  can0_powertrain.h  can_bus.c  can_bus.h  can_control.c  can_control.h  can_task.c  can_task.h  dash.c  dash.h  dio.c  dio.h  dms_defines.h  dms_logging.c  fsm.c  fsm.h  fsm_task.c  fsm_task.h  input_control.c  input_control.h  io_control.c  io_control.h  log.c  log.h  motor_controller.c  motor_controller.h  node.h  ouptut_control.c  output_control.h  pedal_logic.c  pedal_logic.h  relay.c  relay.h  sensor_control.c  sensor_control.h  (+14 more)
USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c
cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
docs/: README.md  arm-support.md  can.md  hardware-revisions.md  hil-testing.md  logging-and-telemetry.md  promts.md  runtime.md  unit-testing.md
docs/architecture/: Torque_Control_Process_Drawio_Link  VCU_Torque_Safety_Procedures.md  vcu-boot.md  vcu-fault-handling.md  vcu-finite-state-machine.md  vcu-gpio.md  vcu-input-spoof.md  vcu-logging.md  vcu-motor-control.md  vcu-power-distribution.md  vcu-replay-telemetry.md  vcu-sensors.md  vcu-shutdown-circuit.md  vcu-testing.md  vcu-thermocouple.md  vcu-watchdog.md
hardware/: README.md
scripts/: README.md  can-monitor.sh  serial-monitor.sh
tools/: .gitignore  99-vcu.rules  README.md  pytest.ini  requirements.txt  vcu_hil.py  vcu_replay.py
(+34 files in other folders)
